--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "maplibre-gl": "^2.1.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-map-gl": "^7.0.6"
   }
 }
