--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@turf/bbox": "^6.5.0",
+    "js-search": "^2.0.0",
     "maplibre-gl": "^2.1.6",
+    "ngraph.graph": "^20.0.0",
+    "rbush": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "^7.0.6"
