--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@math.gl/web-mercator": "^3.5.7",
     "@turf/bbox": "^6.5.0",
     "js-search": "^2.0.0",
     "maplibre-gl": "^2.1.6",
@@ -40,6 +41,7 @@
     "rbush": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-map-gl": "^7.0.6"
+    "react-map-gl": "^7.0.6",
+    "use-debounce": "^7.0.1"
   }
 }
