--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "^7.0.6",
+    "react-router-dom": "^6.2.1",
     "use-debounce": "^7.0.1"
   }
 }
