--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
   "dependencies": {
     "@math.gl/web-mercator": "^3.5.7",
     "@turf/bbox": "^6.5.0",
+    "framer-motion": "^6.2.6",
     "js-search": "^2.0.0",
     "maplibre-gl": "^2.1.6",
     "ngraph.graph": "^20.0.0",
     "rbush": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-map-gl": "^7.0.6",
     "react-router-dom": "^6.2.1",
     "use-debounce": "^7.0.1"
