--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "test": "webpack serve ./test/index.jsx --open --mode=development"
   },
   "repository": {
     "type": "git",
