--- a/docs/peripleo.config.json
+++ b/docs/peripleo.config.json
@@ -3,6 +3,6 @@
   "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
   "data": [
     { "name": "Portable Antiquities Scheme", "format": "LINKED_PLACES", "src": "data/PAS_Warwickshire.lp.json" },
-    { "name": "Hollar", "format": "LINKED_PLACES", "src": "data/Hollar_LP.json" }
+    { "name": "Hollar", "format": "LINKED_PLACES", "src": "data/Hollar-1660.lp.json" }
   ]
 }
