--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rbush": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
     "react-joyride": "^2.3.2",
     "react-map-gl": "^7.0.6",
