--- a/public/peripleo.config.json
+++ b/public/peripleo.config.json
@@ -2,13 +2,9 @@
   "api_key": "cqqmcLw28krG9Fl7V3kg",
   "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
   "data": [
-    { "name": "Leif's Early Monasteries", "format": "LINKED_PLACES", "src": "data/early-monasteries.lp.json" },
-    { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "data/coins/alexandrian-tetradrachms.lp.json" },
-    { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "data/coins/base-byzantine-coins.lp.json" },
-    { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "data/coins/ptolemaic-coins.lp.json" }
-  ],
-  "layers": [
-    { "name": "SW Rivers", "src": "layers/SW_rivers.geojson", "color": "#5555ff" },
-    { "name": "SW Routes", "src": "layers/SW_Routes.geojson", "color": "#727272" }
+    { "name": "Portable Antiquities Scheme", "format": "LINKED_PLACES", "src": "data/PAS_Warwickshire.lp.json" },
+    { "name": "Hollar", "format": "LINKED_PLACES", "src": "data/Hollar-1660.lp.json" },
+    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "data/VisitPlus-UK.lp.json" },
+    { "name": "VCH Places", "format": "LINKED_PLACES", "src": "data/VCH-Places.lp.json" }
   ]
 }
