--- a/public/peripleo.config.json
+++ b/public/peripleo.config.json
@@ -4,7 +4,6 @@
   "data": [
     { "name": "Portable Antiquities Scheme", "format": "LINKED_PLACES", "src": "data/PAS_Warwickshire.lp.json" },
     { "name": "Hollar", "format": "LINKED_PLACES", "src": "data/Hollar-1660.lp.json" },
-    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "data/VisitPlus-UK.lp.json" },
-    { "name": "VCH Places", "format": "LINKED_PLACES", "src": "data/VCH-Places.lp.json" }
+    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "data/VisitPlus-UK.lp.json" }
   ]
 }
