--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
+    "react-image-lightbox": "^5.1.4",
     "react-joyride": "^2.3.2",
     "react-map-gl": "^7.0.6",
     "react-router-dom": "^6.2.1",
