--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -2,7 +2,7 @@
     "api_key": "cqqmcLw28krG9Fl7V3kg",
     "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
     "data": [
-      { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "../data/VisitPlus-UK.lp.json" }
+      { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "../data/VisitPlus.lp.json" }
     ],
     "link_icons": {
       "www.nationaltrust.org.uk": "../logos/www.nationaltrust.org.uk.png",
