--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-joyride": "^2.3.2",
     "react-map-gl": "^7.0.6",
     "react-router-dom": "^6.2.1",
+    "react-transition-group": "^4.4.2",
     "recoil": "^0.6.1",
     "use-debounce": "^7.0.1"
   }
