--- a/public/peripleo.config.json
+++ b/public/peripleo.config.json
@@ -2,17 +2,15 @@
   "api_key": "cqqmcLw28krG9Fl7V3kg",
   "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
   "data": [
-    { 
-      "name": "VisitPlus", 
-      "format": "LINKED_PLACES", 
-      "src": "data/VisitPlus.lp.json",
-      "facets": [
-        "dataset",
-        "has_image",
-        { "name": "type", "path": ["types", "label"] },
-        { "name": "custodian", "path": ["relations", "label"] }
-      ]
-    }
+    { "name": "Portable Antiquities Scheme", "format": "LINKED_PLACES", "src": "data/PAS_Warwickshire.lp.json", "logo": "logos/finds.org.uk.png" },
+    { "name": "Hollar", "format": "LINKED_PLACES", "src": "data/Hollar-1660.lp.json" },
+    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "data/VisitPlus.lp.json" }
+  ],
+  "facets": [
+    "dataset",
+    "has_image",
+    "type",
+    { "name": "custodian", "path": ["relations", "label"], "condition": [ "relationType", "http://vocab.getty.edu/page/aat/300160390" ] }
   ],
   "link_icons": {
     "www.nationaltrust.org.uk": "logos/www.nationaltrust.org.uk.png",
