--- a/public/peripleo.config.json
+++ b/public/peripleo.config.json
@@ -4,9 +4,11 @@
   "data": [
     { "name": "Portable Antiquities Scheme", "format": "LINKED_PLACES", "src": "data/PAS_Warwickshire.lp.json", "logo": "logos/finds.org.uk.png" },
     { "name": "Hollar", "format": "LINKED_PLACES", "src": "data/Hollar-1660.lp.json" },
-    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "data/VisitPlus.lp.json" }
+    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "data/VisitPlus.lp.json" },
+    { "name": "Mapping Museums", "format": "LINKED_PLACES", "src": "data/Mapping-Museums.lp.json" }
   ],
   "facets": [
+    "dataset",
     { "name": "custodian", "path": ["relations", "label"], "condition": [ "relationType", "http://vocab.getty.edu/page/aat/300160390" ] },
     "type",
     "has_image"
