Updated PAS dataset on test/preview site + configured 'technique' facet

--- a/docs/peripleo.config.json
+++ b/docs/peripleo.config.json
@@ -7,6 +7,13 @@
     { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "data/VisitPlus-UK.lp.json" },
     { "name": "Mapping Museums", "format": "LINKED_PLACES", "src": "data/Mapping-Museums.lp.json" }
   ],
+  "facets": [
+    "dataset",
+    { "name": "custodian", "path": ["relations", "label"], "condition": [ "relationType", "http://vocab.getty.edu/page/aat/300160390" ] },
+    "type",
+    { "name": "technique", "path": ["relations", "label"], "condition": [ "relationType", "aat:300138082" ] },
+    "has_image"
+  ],
   "link_icons": {
     "www.nationaltrust.org.uk": "logos/www.nationaltrust.org.uk.png",
     "www.mola.org.uk": "logos/www.mola.org.uk.png",
