Removed 'has image' facet

--- a/docs/hfa/peripleo.config.json
+++ b/docs/hfa/peripleo.config.json
@@ -4,6 +4,10 @@
     "data": [
       { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "../data/HfA_geojsont.json" }
     ],
+    "facets": [
+      "dataset",
+      "type"
+    ],
     "link_icons": {
       "www.nationaltrust.org.uk": "../logos/www.nationaltrust.org.uk.png",
       "www.mola.org.uk": "../logos/www.mola.org.uk.png",
