--- a/docs/hfa/peripleo.config.json
+++ b/docs/hfa/peripleo.config.json
@@ -2,10 +2,11 @@
     "api_key": "cqqmcLw28krG9Fl7V3kg",
     "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
     "data": [
-      { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "../data/HfA_geojsont.json" }
+      { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "data/hfa.lp.json" }, 
+      { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "data/hfa.pas.lp.json" }
     ],
     "facets": [
-      "dataset",
+      { "name": "organisation", "path": ["properties", "organisation" ] },
       "type"
     ],
     "link_icons": {
