--- a/docs/hfa/peripleo.config.json
+++ b/docs/hfa/peripleo.config.json
@@ -1,9 +1,9 @@
 {
     "api_key": "cqqmcLw28krG9Fl7V3kg",
-    "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
+    "initial_bounds": [-0.8, 51.1, 0.8, 51.95],
     "data": [
-      { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "data/hfa.lp.json" }, 
-      { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "data/hfa.pas.lp.json" }
+      { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "../data/hfa.lp.json" }, 
+      { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "../data/hfa.pas.lp.json" }
     ],
     "facets": [
       { "name": "organisation", "path": ["properties", "organisation" ] },
