--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -24,6 +24,7 @@
       "finds.org.uk": "../logos/finds.org.uk.png",
       "cadw.gov.wales": "../logos/cadw.gov.wales.png",
       "www.geograph.org.uk": "../logos/geograph.org.png",
-      "w3id.org": "../logos/w3id.org.png"
+      "w3id.org": "../logos/w3id.org.png",
+      "openplaques.org": "../logos/openplaques.png"
     }
   }
