--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -25,6 +25,7 @@
       "cadw.gov.wales": "../logos/cadw.gov.wales.png",
       "www.geograph.org.uk": "../logos/geograph.org.png",
       "w3id.org": "../logos/w3id.org.png",
-      "openplaques.org": "../logos/openplaques.png"
+      "openplaques.org": "../logos/openplaques.png",
+      "artuk.org": "../logos/ArtUK.org.png"
     }
   }
