--- a/docs/leifuss/peripleo.config.json
+++ b/docs/leifuss/peripleo.config.json
@@ -22,9 +22,15 @@
       "www.english-heritage.org.uk": "../logos/www.english-heritage.org.uk.png",
       "www.britishmuseum.org": "../logos/www.britishmuseum.org.png",
       "www.bl.uk": "../logos/www.bl.uk.png",
+      "sounds.bl.uk": "../logos/www.bl.uk.png",
+      "britishlibrary.georeferencer.com": "../logos/www.bl.uk.png",
       "hrp.org.uk": "../logos/hrp.org.uk.png",
       "historicengland.org.uk": "../logos/historicengland.org.uk.png",
       "finds.org.uk": "../logos/finds.org.uk.png",
-      "cadw.gov.wales": "../logos/cadw.gov.wales.png"
+      "cadw.gov.wales": "../logos/cadw.gov.wales.png",
+      "www.geograph.org.uk": "../logos/geograph.org.png",
+      "w3id.org": "../logos/w3id.org.png",
+      "openplaques.org": "../logos/openplaques.png",
+      "artuk.org": "../logos/ArtUK.org.png"
     }
   }
