--- a/public/peripleo.config.json
+++ b/public/peripleo.config.json
@@ -1,5 +1,4 @@
 {
-  "api_key": "cqqmcLw28krG9Fl7V3kg",
   "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
   "data": [
     { "name": "Portable Antiquities Scheme", "format": "LINKED_PLACES", "src": "data/PAS_Warwickshire.lp.json", "logo": "logos/finds.org.uk.png" },
@@ -8,6 +7,7 @@
     { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "data/hfa.lp.json" }, 
     { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "data/hfa.pas.lp.json" }
   ],
+  "map_style": "https://api.maptiler.com/maps/outdoor/style.json?key=cqqmcLw28krG9Fl7V3kg",
   "facets": [
     "dataset",
     { "name": "organisation", "path": ["properties", "organisation" ] },
