--- a/public/peripleo.config.leifuss.json
+++ b/public/peripleo.config.leifuss.json
@@ -1,6 +1,6 @@
 {
-  "api_key": "cqqmcLw28krG9Fl7V3kg",
   "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
+  "map_style": "https://api.maptiler.com/maps/outdoor/style.json?key=cqqmcLw28krG9Fl7V3kg",
   "data": [
     { "name": "Leif's Early Monasteries", "format": "LINKED_PLACES", "src": "data/early-monasteries.lp.json" },
     { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "data/coins/alexandrian-tetradrachms.lp.json" },
@@ -8,8 +8,17 @@
     { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "data/coins/ptolemaic-coins.lp.json" }
   ],
   "layers": [
-    { "name": "SW Rivers", "src": "layers/SW_rivers.geojson", "color": "#5555ff" },
-    { "name": "SW Routes", "src": "layers/SW_Routes.geojson", "color": "#727272" }
+    { 
+      "name": "SW Rivers", 
+      "type": "geojson",
+      "src": "layers/SW_rivers.geojson", 
+      "color": "#5555ff" 
+    }, { 
+      "name": "SW Routes", 
+      "type": "geojson",
+      "src": "layers/SW_Routes.geojson", 
+      "color": "#727272" 
+    }
   ],
   "link_icons": {
     "www.nationaltrust.org.uk": "logos/www.nationaltrust.org.uk.png",
