--- a/docs/leifuss/peripleo.config.json
+++ b/docs/leifuss/peripleo.config.json
@@ -1,36 +1,36 @@
 {
-    "api_key": "cqqmcLw28krG9Fl7V3kg",
-    "initial_bounds": [-10, 41.1, 35.3, 61.0],
-    "data": [
-      { "name": "Leif's Early Monasteries", "format": "LINKED_PLACES", "src": "../data/early-monasteries.lp.json" },
-      { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "../data/coins/alexandrian-tetradrachms.lp.json" },
-      { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "../data/coins/base-byzantine-coins.lp.json" },
-      { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "../data/coins/ptolemaic-coins.lp.json" }
-    ],
-    "facets": [
-      "dataset",
-      "type"
-    ],
-    "layers": [
-      { "name": "SW Rivers", "src": "../layers/SW_rivers.geojson", "color": "#5555ff" },
-      { "name": "SW Routes", "src": "../layers/SW_Routes.geojson", "color": "#727272" }
-    ],
-    "link_icons": {
-      "www.nationaltrust.org.uk": "../logos/www.nationaltrust.org.uk.png",
-      "www.mola.org.uk": "../logos/www.mola.org.uk.png",
-      "www.historicenvironment.scot": "../logos/www.historicenvironment.scot.png",
-      "www.english-heritage.org.uk": "../logos/www.english-heritage.org.uk.png",
-      "www.britishmuseum.org": "../logos/www.britishmuseum.org.png",
-      "www.bl.uk": "../logos/www.bl.uk.png",
-      "sounds.bl.uk": "../logos/www.bl.uk.png",
-      "britishlibrary.georeferencer.com": "../logos/www.bl.uk.png",
-      "hrp.org.uk": "../logos/hrp.org.uk.png",
-      "historicengland.org.uk": "../logos/historicengland.org.uk.png",
-      "finds.org.uk": "../logos/finds.org.uk.png",
-      "cadw.gov.wales": "../logos/cadw.gov.wales.png",
-      "www.geograph.org.uk": "../logos/geograph.org.png",
-      "w3id.org": "../logos/w3id.org.png",
-      "openplaques.org": "../logos/openplaques.png",
-      "artuk.org": "../logos/ArtUK.org.png"
-    }
+  "initial_bounds": [-10, 41.1, 35.3, 61.0],
+  "map_style": "https://api.maptiler.com/maps/outdoor/style.json?key=cqqmcLw28krG9Fl7V3kg",
+  "data": [
+    { "name": "Leif's Early Monasteries", "format": "LINKED_PLACES", "src": "../data/early-monasteries.lp.json" },
+    { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "../data/coins/alexandrian-tetradrachms.lp.json" },
+    { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "../data/coins/base-byzantine-coins.lp.json" },
+    { "name": "Leif's Coins", "format": "LINKED_PLACES", "src": "../data/coins/ptolemaic-coins.lp.json" }
+  ],
+  "facets": [
+    "dataset",
+    "type"
+  ],
+  "layers": [
+    { "name": "SW Rivers", "type": "geojson", "src": "../layers/SW_rivers.geojson", "color": "#5555ff" },
+    { "name": "SW Routes", "type": "geojson", "src": "../layers/SW_Routes.geojson", "color": "#727272" }
+  ],
+  "link_icons": {
+    "www.nationaltrust.org.uk": "../logos/www.nationaltrust.org.uk.png",
+    "www.mola.org.uk": "../logos/www.mola.org.uk.png",
+    "www.historicenvironment.scot": "../logos/www.historicenvironment.scot.png",
+    "www.english-heritage.org.uk": "../logos/www.english-heritage.org.uk.png",
+    "www.britishmuseum.org": "../logos/www.britishmuseum.org.png",
+    "www.bl.uk": "../logos/www.bl.uk.png",
+    "sounds.bl.uk": "../logos/www.bl.uk.png",
+    "britishlibrary.georeferencer.com": "../logos/www.bl.uk.png",
+    "hrp.org.uk": "../logos/hrp.org.uk.png",
+    "historicengland.org.uk": "../logos/historicengland.org.uk.png",
+    "finds.org.uk": "../logos/finds.org.uk.png",
+    "cadw.gov.wales": "../logos/cadw.gov.wales.png",
+    "www.geograph.org.uk": "../logos/geograph.org.png",
+    "w3id.org": "../logos/w3id.org.png",
+    "openplaques.org": "../logos/openplaques.png",
+    "artuk.org": "../logos/ArtUK.org.png"
   }
+}
