--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -23,6 +23,7 @@
     "historicengland.org.uk": "../logos/historicengland.org.uk.png",
     "finds.org.uk": "../logos/finds.org.uk.png",
     "cadw.gov.wales": "../logos/cadw.gov.wales.png",
+    "cadwpublic-api.azurewebsites.net": "../logos/cadw.gov.wales.png",
     "www.geograph.org.uk": "../logos/geograph.org.png",
     "w3id.org": "../logos/w3id.org.png",
     "openplaques.org": "../logos/openplaques.png",
