--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -12,6 +12,7 @@
   ],
   "link_icons": {
     "www.nationaltrust.org.uk": "../logos/www.nationaltrust.org.uk.png",
+    "www.nationaltrustcollections.org.uk": "../logos/www.nationaltrustcollections.org.uk.svg",
     "www.mola.org.uk": "../logos/www.mola.org.uk.png",
     "www.historicenvironment.scot": "../logos/www.historicenvironment.scot.png",
     "www.english-heritage.org.uk": "../logos/www.english-heritage.org.uk.png",
