--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -2,9 +2,7 @@
   "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
   "map_style": "https://api.maptiler.com/maps/outdoor/style.json?key=cqqmcLw28krG9Fl7V3kg",
   "data": [
-    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "../data/VisitPlus.lp.json" },
-    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "../data/Mapping-Museums.lp.json" },
-    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "../data/ArtUK.lp.json" }
+    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "../data/VisitPlus.lp.json" }
   ],
   "facets": [
     { "name": "custodian", "path": ["relations", "label"], "condition": [ "relationType", "http://vocab.getty.edu/page/aat/300160390" ] },
