--- a/docs/peripleo.config.json
+++ b/docs/peripleo.config.json
@@ -2,10 +2,10 @@
   "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
   "map_style": "https://api.maptiler.com/maps/outdoor/style.json?key=cqqmcLw28krG9Fl7V3kg",
   "data": [
-    { "name": "Portable Antiquities Scheme", "format": "LINKED_PLACES", "src": "data/PAS_Warwickshire.lp.json", "logo": "logos/finds.org.uk.png" },
-    { "name": "Hollar", "format": "LINKED_PLACES", "src": "data/Hollar-1660.lp.json" },
-    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "data/VisitPlus-UK.lp.json" },
-    { "name": "Mapping Museums", "format": "LINKED_PLACES", "src": "data/Mapping-Museums.lp.json" }
+    { "name": "Portable Antiquities Scheme", "format": "LINKED_PLACES", "src": "data/PAS_Warwickshire.lp.json", "logo": "logos/finds.org.uk.png", "attribution":"Findspot Data © <a href=\"https://finds.org.uk/\" target=\"_blank\">Portable Antiquities Scheme</a>" },
+    { "name": "Hollar", "format": "LINKED_PLACES", "src": "data/Hollar-1660.lp.json", "attribution":"Hollar 1660 © <a href=\"https://viaeregiae.org/\" target=\"_blank\"><i>Viae Regiae</i> Contributors</a>" },
+    { "name": "VisitPlus", "format": "LINKED_PLACES", "src": "data/VisitPlus-UK.lp.json", "attribution":"VisitPlus © <a href=\"https://britishlibrary.github.io/locating-a-national-collection/\" target=\"_blank\"><i>Locating a National Collection</i> Partners & Contributors</a>" },
+    { "name": "Mapping Museums", "format": "LINKED_PLACES", "src": "data/Mapping-Museums.lp.json", "attribution":"Museums data © <a href=\"https://museweb.dcs.bbk.ac.uk/home\" target=\"_blank\">Mapping Museums</a>" }
   ],
   "facets": [
     "dataset",
