--- a/docs/hfa/peripleo.config.json
+++ b/docs/hfa/peripleo.config.json
@@ -2,11 +2,13 @@
   "initial_bounds": [-0.08, 51.45, 0.08, 51.55],
   "map_style": "https://api.maptiler.com/maps/outdoor/style.json?key=cqqmcLw28krG9Fl7V3kg",
   "data": [
-    { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "../data/hfa.lp.json", "attribution":"Heritage for All Â© <a href=\"https://britishlibrary.github.io/locating-a-national-collection/\" target=\"_blank\"><i>Locating a National Collection</i> Partners & Contributors</a>" }, 
-    { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "../data/hfa.pas.lp.json" }
+    { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "../data/hfa.lp.json", "attribution":"Heritage for All © <a href=\"https://britishlibrary.github.io/locating-a-national-collection/\" target=\"_blank\"><i>Locating a National Collection</i> Partners & Contributors</a>" }, 
+    { "name": "Heritage for All", "format": "LINKED_PLACES", "src": "../data/hfa.pas.lp.json" },
+    { "name": "Tower Hamlets ArtUK", "format": "LINKED_PLACES", "src": "../data/Tower_Hamlets_ArtUK.lp.json", "attribution":"Tower Hamlets Art UK © <a href=\"https://artuk.org//\" target=\"_blank\">Art UK</a>" }
   ],
   "facets": [
-    { "name": "organisation", "path": ["properties", "organisation" ] }
+    { "name": "organisation", "path": ["properties", "organisation" ] },
+    { "name": "art type", "path": ["properties", "artworkType" ] }
   ],
   "link_icons": {
     "www.nationaltrust.org.uk": "../logos/www.nationaltrust.org.uk.png",
