--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -15,7 +15,9 @@
     "www.historicenvironment.scot": "../logos/www.historicenvironment.scot.png",
     "www.english-heritage.org.uk": "../logos/www.english-heritage.org.uk.png",
     "www.britishmuseum.org": "../logos/www.britishmuseum.org.png",
+    "www.flickr.com": "../logos/www.bl.uk.png",
     "www.bl.uk": "../logos/www.bl.uk.png",
+    "access.bl.uk": "../logos/www.bl.uk.png",
     "sounds.bl.uk": "../logos/www.bl.uk.png",
     "britishlibrary.georeferencer.com": "../logos/www.bl.uk.png",
     "hrp.org.uk": "../logos/hrp.org.uk.png",
