--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router-dom": "^6.2.1",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.6.1",
+    "sanitize-html": "^2.7.0",
     "use-debounce": "^7.0.1"
   }
 }
