--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -27,6 +27,7 @@
     "cadwpublic-api.azurewebsites.net": "../logos/cadw.gov.wales.png",
     "www.geograph.org.uk": "../logos/geograph.org.png",
     "w3id.org": "../logos/w3id.org.png",
+    "w3id.org/locolligo/Mapping-Museums": "../logos/museums.png",
     "openplaques.org": "../logos/openplaques.png",
     "artuk.org": "../logos/ArtUK.org.png"
   }
