--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -28,6 +28,7 @@
     "www.geograph.org.uk": "../logos/geograph.org.png",
     "w3id.org": "../logos/w3id.org.png",
     "w3id.org/locolligo/Mapping-Museums": "../logos/museums.png",
+    "w3id.org/locolligo/VCH-Places": "../logos/VCH.jpg",
     "openplaques.org": "../logos/openplaques.png",
     "artuk.org": "../logos/ArtUK.org.png"
   }
