Added GMaps logo

--- a/docs/leifuss/peripleo.config.json
+++ b/docs/leifuss/peripleo.config.json
@@ -31,6 +31,7 @@
     "www.geograph.org.uk": "../logos/geograph.org.png",
     "w3id.org": "../logos/w3id.org.png",
     "openplaques.org": "../logos/openplaques.png",
-    "artuk.org": "../logos/ArtUK.org.png"
+    "artuk.org": "../logos/ArtUK.org.png",
+    "maps.google.com": "../logos/maps.google.com.png"
   }
 }
