Updated logo links

--- a/docs/leifuss/peripleo.config.json
+++ b/docs/leifuss/peripleo.config.json
@@ -32,6 +32,8 @@
     "w3id.org": "../logos/w3id.org.png",
     "openplaques.org": "../logos/openplaques.png",
     "artuk.org": "../logos/ArtUK.org.png",
-    "maps.google.com": "../logos/maps.google.com.png"
+    "maps.google.com": "../logos/maps.google.com.png",
+    "en.wikipedia.org": "../logos/en.wikipedia.org.png",
+    "www.pastplace.org": "../logos/broken-link.png"
   }
 }
