--- a/docs/hollar/peripleo.config.json
+++ b/docs/hollar/peripleo.config.json
@@ -28,6 +28,8 @@
     "www.geograph.org.uk": "../logos/geograph.org.png",
     "w3id.org": "../logos/w3id.org.png",
     "openplaques.org": "../logos/openplaques.png",
-    "artuk.org": "../logos/ArtUK.org.png"
+    "artuk.org": "../logos/ArtUK.org.png",
+    "en.wikipedia.org": "../logos/en.wikipedia.org.png",
+    "www.pastplace.org": "../logos/broken-link.png"
   }
 }
