--- a/docs/hollar/peripleo.config.json
+++ b/docs/hollar/peripleo.config.json
@@ -30,6 +30,7 @@
     "openplaques.org": "../logos/openplaques.png",
     "artuk.org": "../logos/ArtUK.org.png",
     "en.wikipedia.org": "../logos/en.wikipedia.org.png",
-    "www.pastplace.org": "../logos/broken-link.png"
+    "www.pastplace.org": "../logos/broken-link.png",
+    "whgazetteer.org": "../logos/whgazetteer.org.svg"
   }
 }
