--- a/docs/hollar/peripleo.config.json
+++ b/docs/hollar/peripleo.config.json
@@ -31,6 +31,7 @@
     "artuk.org": "../logos/ArtUK.org.png",
     "en.wikipedia.org": "../logos/en.wikipedia.org.png",
     "www.pastplace.org": "../logos/broken-link.png",
+    "emew.io": "../logos/broken-link.png",
     "whgazetteer.org": "../logos/whgazetteer.org.svg"
   }
 }
