Added geonames logo and fixed links

--- a/docs/BL/peripleo.config.json
+++ b/docs/BL/peripleo.config.json
@@ -29,6 +29,7 @@
     "openplaques.org": "../logos/openplaques.png",
     "artuk.org": "../logos/ArtUK.org.png",
     "en.wikipedia.org": "../logos/en.wikipedia.org.png",
-    "www.pastplace.org": "../logos/broken-link.png"
+    "www.pastplace.org": "../logos/broken-link.png",
+    "www.geonames.org": "../logos/www.geonames.org.svg"
   }
 }
