--- a/docs/leifuss/peripleo.config.json
+++ b/docs/leifuss/peripleo.config.json
@@ -34,6 +34,7 @@
     "artuk.org": "../logos/ArtUK.org.png",
     "maps.google.com": "../logos/maps.google.com.png",
     "en.wikipedia.org": "../logos/en.wikipedia.org.png",
-    "www.pastplace.org": "../logos/broken-link.png"
+    "www.pastplace.org": "../logos/broken-link.png",
+    "www.geonames.org": "../logos/www.geonames.org.svg"
   }
 }
