--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -33,6 +33,7 @@
     "artuk.org": "../logos/ArtUK.org.png",
     "en.wikipedia.org": "../logos/en.wikipedia.org.png",
     "www.pastplace.org": "../logos/broken-link.png",
-    "whgazetteer.org": "../logos/whgazetteer.org.svg"
+    "whgazetteer.org": "../logos/whgazetteer.org.svg",
+    "www.geonames.org": "../logos/www.geonames.org.svg"
   }
 }
