Replaced Wikidata logo and added links

--- a/docs/BL/peripleo.config.json
+++ b/docs/BL/peripleo.config.json
@@ -30,6 +30,7 @@
     "artuk.org": "../logos/ArtUK.org.png",
     "en.wikipedia.org": "../logos/en.wikipedia.org.png",
     "www.pastplace.org": "../logos/broken-link.png",
-    "www.geonames.org": "../logos/www.geonames.org.svg"
+    "www.geonames.org": "../logos/www.geonames.org.svg",
+    "www.wikidata.org": "../logos/www.wikidata.org.svg"
   }
 }
