--- a/docs/hollar/peripleo.config.json
+++ b/docs/hollar/peripleo.config.json
@@ -34,6 +34,7 @@
     "emew.io": "../logos/broken-link.png",
     "whgazetteer.org": "../logos/whgazetteer.org.svg",
     "www.geonames.org": "../logos/www.geonames.org.svg",
-    "sws.geonames.org": "../logos/www.geonames.org.svg"
+    "sws.geonames.org": "../logos/www.geonames.org.svg",
+    "www.wikidata.org": "../logos/www.wikidata.org.svg"
   }
 }
