--- a/docs/leifuss/peripleo.config.json
+++ b/docs/leifuss/peripleo.config.json
@@ -35,6 +35,7 @@
     "maps.google.com": "../logos/maps.google.com.png",
     "en.wikipedia.org": "../logos/en.wikipedia.org.png",
     "www.pastplace.org": "../logos/broken-link.png",
-    "www.geonames.org": "../logos/www.geonames.org.svg"
+    "www.geonames.org": "../logos/www.geonames.org.svg",
+    "www.wikidata.org": "../logos/www.wikidata.org.svg"
   }
 }
