--- a/docs/visitplus/peripleo.config.json
+++ b/docs/visitplus/peripleo.config.json
@@ -34,6 +34,7 @@
     "en.wikipedia.org": "../logos/en.wikipedia.org.png",
     "www.pastplace.org": "../logos/broken-link.png",
     "whgazetteer.org": "../logos/whgazetteer.org.svg",
-    "www.geonames.org": "../logos/www.geonames.org.svg"
+    "www.geonames.org": "../logos/www.geonames.org.svg",
+    "www.wikidata.org": "../logos/www.wikidata.org.svg"
   }
 }
