--- a/docs/leifuss/peripleo.config.json
+++ b/docs/leifuss/peripleo.config.json
@@ -185,7 +185,7 @@
     },
     {
       "pattern": "www.wikidata.org",
-      "img": "../logos/www.wikidata.org.svg",
+      "img": null,
       "label": "Wikidata"
     }
   ]
