--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
   "dependencies": {
     "@math.gl/web-mercator": "^3.5.7",
     "@turf/bbox": "^6.5.0",
+    "@turf/centroid": "^6.5.0",
     "flexsearch": "^0.7.21",
     "framer-motion": "^6.2.6",
     "maplibre-gl": "^2.1.6",
     "ngraph.graph": "^20.0.0",
     "rbush": "^3.0.1",
+    "rbush-knn": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
