update hfa config facets

--- a/docs/hfa/peripleo.config.json
+++ b/docs/hfa/peripleo.config.json
@@ -28,10 +28,10 @@
       ]
     },
     {
-      "name": "art type",
+      "name": "type",
       "path": [
         "properties",
-        "artworkType"
+        "facet"
       ]
     }
   ],
