--- a/docs/hfa/peripleo.config.json
+++ b/docs/hfa/peripleo.config.json
@@ -16,7 +16,8 @@
     {
       "name": "Heritage for All",
       "format": "LINKED_PLACES",
-      "src": "../data/hfa.pas.lp.json"
+      "src": "../data/hfa.pas.lp.json",
+      "attribution": "Heritage for All © <a href=\"https://britishlibrary.github.io/locating-a-national-collection/\" target=\"_blank\"><i>Locating a National Collection</i> Partners & Contributors</a>"
     }
   ],
   "facets": [
