--- a/docs/hollar/peripleo.config.json
+++ b/docs/hollar/peripleo.config.json
@@ -40,5 +40,6 @@
     { "pattern": "www.geonames.org", "img": null, "label": "GeoNames" },
     { "pattern": "sws.geonames.org", "img": null, "label": "GeoNames" },
     { "pattern": "www.wikidata.org", "img": null, "label": "Wikidata" }
-  ]
+  ],
+  "disableMyLocation": true
 }
